--- a/website/pages/style.css
+++ b/website/pages/style.css
@@ -1,6 +1,4 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+body {}
 
 #title {
     font-size: 50px;
@@ -15,24 +13,45 @@ body {
 
 .buttons {
     position: absolute;
-    right: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    flex-direction: row;
-    gap: 15px;
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+    width: 300px;
 }
 
 #loginbutton {
-    
-    display: flex;
+
+    font-size: 25px;
     cursor: pointer;
-    font-size: 18px;
+    border: none;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 8px;
+}
+
+#loginbutton:hover {
+    background-color: white;
+    color: cornflowerblue;
+    border: 1px solid blue;
+    
 }
 
 #signupbutton {
+    font-size: 25px;
+    border: none;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 8px;
+}
 
-    font-size: 18px;
-    cursor: pointer;
-    display: flex;
+#signupbutton:hover {
+    background-color: white;
+    color: cornflowerblue;
+    border: 1px solid cornflowerblue;
 }
 
 .popup-overlay {
@@ -72,14 +91,14 @@ body {
 .popup-box button {
     padding: 10px;
     width: 100%;
-    background-color: #4CAF50;
-    color: white;
+    background-color: cornflowerblue;
+    color: #333;
     border: none;
     cursor: pointer;
 }
 
 .popup-box button:hover {
-    background-color: #45a049;
+    background-color: #f4f4f9;
 }
 
 /* Global Styles */
@@ -93,7 +112,7 @@ body {
 
 /* Header */
 header {
-    background-color: #333;
+    background-color: cornflowerblue;
     color: white;
     padding: 15px;
     text-align: center;
