--- a/website/pages/style.css
+++ b/website/pages/style.css
@@ -1,4 +1,3 @@
-body {}
 
 #title {
     font-size: 50px;
@@ -31,6 +30,8 @@ body {}
     background-color: cornflowerblue;
     color: white;
     border-radius: 8px;
+    width: 141px;
+    height: 70px;
 }
 
 #loginbutton:hover {
@@ -46,6 +47,8 @@ body {}
     background-color: cornflowerblue;
     color: white;
     border-radius: 8px;
+    width: 141px;
+    height: 70px;
 }
 
 #signupbutton:hover {
