--- a/website/pages/compare.css
+++ b/website/pages/compare.css
@@ -2,6 +2,6 @@
     border: none;
     background: none;
     /* אם גם לא רוצים רקע */
-    cursor: pointer;
+    cursor: pointer;;;
     /* כדי שיראה כמו כפתור */
 }
