--- a/website/pages/index.css
+++ b/website/pages/index.css
@@ -9,15 +9,23 @@
     background-color: blanchedalmond;
     height: 80px;
 }
+    .welcome-text {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 40px;
+      color: #333;
+      align-items: center;
+    }
 
 .buttons {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: 110px;
     align-items: center;
     width: 300px;
 }
@@ -117,7 +125,7 @@ body {
 header {
     background-color: cornflowerblue;
     color: white;
-    padding: 15px;
+    padding: 30px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
     display: flex;
@@ -159,6 +167,66 @@ button:focus,
 a:focus {
     outline: none;
 }
+#ql {
+position: relative;
+left: 645px;
+bottom: -125px;
+}
+#qs{
+left: 650px;
+bottom: -295px;
+position: relative;
+}
+/* כפתור עגול */
+.info-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+/* רקע חצי שקוף לפופאפ */
+.info-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 999;
+  justify-content: center;
+  align-items: center;
+}
+
+/* תוכן הפופאפ */
+.info-content {
+  background-color: white;
+  padding: 30px;
+  border-radius: 15px;
+  width: 90%;
+  max-width: 500px;
+  text-align: right;
+  direction: rtl;
+}
+
+/* כפתור סגירה */
+.close-btn {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 
 /* Responsive */
 @media screen and (max-width: 768px) {
