--- a/website/pages/compare.css
+++ b/website/pages/compare.css
@@ -1,26 +1,43 @@
-#logOutButton {
-    background: none;
+
+body {
+  display: flex;
+  justify-content: center;
+  padding: 40px;
 }
-    body {
-      display: flex;
-      justify-content: center;
-      padding: 40px;
-    }
 
-    .container {
-      display: flex;
-      gap: 340px;
-    }
+.container {
+  display: flex;
+  gap: 340px;
+  margin-top: 110px;
+}
 
-    table {
-      border: 2px solid black;
-      border-collapse: collapse;
-      width: 280px;
-      height: 500px;
-    }
+table {
+  border: 2px solid black;
+  border-collapse: collapse;
+  width: 280px;
+  height: 500px;
+}
 
-    td,
-    th {
-      border: 1px solid black;
-      padding: 10px;
-    }
+td,
+th {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+table tr:first-child td {
+  height: 30%;
+}
+
+table tr:last-child td {
+  height: 70%;
+}
+#logOutButton {
+  background: none;
+  border: none;
+  color: black;
+  font-size: 16px;
+  position: fixed;
+  left: 10px;
+  top: 5%;
+  cursor: pointer;
+}
