--- a/website/pages/compare.css
+++ b/website/pages/compare.css
@@ -228,3 +228,57 @@ select {
 .equal {
   border-color: gray;
 }
+.welcomeUser{
+text-align: center;
+font-size:1.5em;
+margin-bottom:50px;
+}
+
+.history-button {
+  position: fixed; 
+  top: 20px;
+  right: 20px;
+  background-color: #0059b3;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+
+.history-button:hover {
+  background-color: white;
+  color: #0059b3;
+  border: 2px solid #0059b3;
+}
+
+.welcomeUser{
+text-align: center;
+font-size:1.5em;
+margin-bottom:50px;
+}
+.history-button {
+  position: fixed; 
+  top: 20px;
+  right: 20px;
+  background-color: #0059b3;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+
+.history-button:hover {
+  background-color: white;
+  color: #0059b3;
+  border: 2px solid #0059b3;
+}
